# tap-cin7

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_cin7/: client.py  streams.py  tap.py
tap_cin7/tests/: __init__.py  test_core.py
