[tool.poetry]
name = "tap-cin7"
version = "0.0.2"
description = "`tap-cin7` is a Singer tap for CIN7, built with the Meltano SDK for Singer Taps."
authors = ["hotglue"]
keywords = [
    "ELT",
    "CIN7",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.3.18"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_cin7"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-cin7 = 'tap_cin7.tap:TapCIN7.cli'
